// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders basic Alert correctly 1`] = `
<ForwardRef(forwardRef)
  message="这是一个警告框"
  onClose={[MockFunction]}
  theme="warning"
  visible={true}
>
  <LocaleReceiver
    forwardedRef={null}
    message="这是一个警告框"
    onClose={[MockFunction]}
    theme="warning"
    visible={true}
  >
    <AlertExtension
      className=""
      closable={true}
      hideIcon={false}
      locale={
        Object {
          "close": "关闭",
        }
      }
      localeCode="zh-cn"
      message="这是一个警告框"
      onClose={[MockFunction]}
      prefixCls="ui-alert"
      theme="warning"
      visible={true}
      width={270}
    >
      <Modal
        animationDuration={300}
        animationType="zoom"
        className=""
        isRadius={false}
        isRound={false}
        minWidth={270}
        onMaskClick={[Function]}
        prefixCls="ui-modal"
        visible={true}
        width={270}
      >
        <Portal
          containerInfo={
            <div>
              <div
                class="ui-modal fade-enter"
                style="animation-duration: 300ms; position: fixed;"
              >
                <div
                  class="ui-modal-wrapper"
                >
                  <div
                    class="ui-modal-dialog zoom-enter"
                    style="width: 270px; min-width: 270px; animation-duration: 300ms;"
                    tabindex="-1"
                  >
                    <div
                      class="ui-modal-body"
                      style="height: auto;"
                    >
                      <div
                        class="ui-alert"
                      >
                        <i
                          class="zw-icon zw-icon--warning-round zw-icon--warning zw-icon--md"
                          theme="warning"
                          type="warning-round"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 32 32"
                            width="1em"
                          >
                            <use
                              xlink:href="#warning-round"
                            />
                          </svg>
                        </i>
                        <span>
                          这是一个警告框
                        </span>
                      </div>
                    </div>
                    <div
                      class="ui-modal-footer"
                    >
                      <button
                        class="zw-button zw-button--default zw-button--radius"
                        type="button"
                      >
                        <span>
                          关闭
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          }
        >
          <div
            className="ui-modal fade-enter"
            onClick={[Function]}
            style={
              Object {
                "animationDuration": "300ms",
                "position": "fixed",
              }
            }
          >
            <div
              className="ui-modal-wrapper"
            >
              <div
                className="ui-modal-dialog zoom-enter"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                style={
                  Object {
                    "animationDuration": "300ms",
                    "minWidth": 270,
                    "width": 270,
                  }
                }
                tabIndex={-1}
              >
                <ModalBody
                  height="auto"
                  prefixCls="ui-modal"
                  style={Object {}}
                >
                  <div
                    className="ui-modal-body"
                    style={
                      Object {
                        "height": "auto",
                      }
                    }
                  >
                    <div
                      className="ui-alert"
                    >
                      <Icon
                        prefixCls="zw-icon"
                        size="md"
                        theme="warning"
                        type="warning-round"
                        viewBox="0 0 32 32"
                      >
                        <Iconfont
                          className="zw-icon zw-icon--warning-round zw-icon--warning zw-icon--md"
                          size="md"
                          theme="warning"
                          type="warning-round"
                        >
                          <Icon
                            className="zw-icon zw-icon--warning-round zw-icon--warning zw-icon--md"
                            prefixCls="zw-icon"
                            size="md"
                            theme="warning"
                            type="warning-round"
                            viewBox="0 0 32 32"
                          >
                            <i
                              className="zw-icon zw-icon--warning-round zw-icon--warning zw-icon--md"
                              size="md"
                              theme="warning"
                              type="warning-round"
                            >
                              <svg
                                fill="currentColor"
                                height="1em"
                                viewBox="0 0 32 32"
                                width="1em"
                              >
                                <use
                                  xlinkHref="#warning-round"
                                />
                              </svg>
                            </i>
                          </Icon>
                        </Iconfont>
                      </Icon>
                      <span>
                        这是一个警告框
                      </span>
                    </div>
                  </div>
                </ModalBody>
                <ModalFooter
                  prefixCls="ui-modal"
                  style={Object {}}
                >
                  <div
                    className="ui-modal-footer"
                    style={Object {}}
                  >
                    <Button
                      ghost={false}
                      htmlType="button"
                      icon=""
                      loading={false}
                      onClick={[MockFunction]}
                      prefixCls="zw-button"
                      shape="radius"
                      size={null}
                      theme="default"
                    >
                      <button
                        className="zw-button zw-button--default zw-button--radius"
                        onClick={[Function]}
                        type="button"
                      >
                        <span>
                          关闭
                        </span>
                      </button>
                    </Button>
                  </div>
                </ModalFooter>
              </div>
            </div>
          </div>
        </Portal>
      </Modal>
    </AlertExtension>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`Alert renders basic normal Alert correctly 1`] = `
<ForwardRef(forwardRef)
  title="测试经典无描述，无icon，无关闭提示框"
  type="info"
>
  <LocaleReceiver
    forwardedRef={null}
    title="测试经典无描述，无icon，无关闭提示框"
    type="info"
  >
    <Alert
      afterClose={[Function]}
      closable={false}
      closeText={null}
      description={null}
      locale={
        Object {
          "close": "关闭",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      onClose={[Function]}
      prefixCls="ui-alert"
      preventHide={false}
      showIcon={false}
      title="测试经典无描述，无icon，无关闭提示框"
      type="info"
      width={500}
    >
      <div
        className="ui-alert ui-alert-info ui-alert-no-with-description"
        style={
          Object {
            "width": 500,
          }
        }
      >
        <span
          className="ui-alert-message"
        >
          测试经典无描述，无icon，无关闭提示框
        </span>
        <span
          className="ui-alert-description"
        />
      </div>
    </Alert>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`Alert renders basic normal Alert correctly 2`] = `
<ForwardRef(forwardRef)
  showIcon={true}
  title="显示icon-信息提示"
  type="info"
>
  <LocaleReceiver
    forwardedRef={null}
    showIcon={true}
    title="显示icon-信息提示"
    type="info"
  >
    <Alert
      afterClose={[Function]}
      closable={false}
      closeText={null}
      description={null}
      locale={
        Object {
          "close": "关闭",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      onClose={[Function]}
      prefixCls="ui-alert"
      preventHide={false}
      showIcon={true}
      title="显示icon-信息提示"
      type="info"
      width={500}
    >
      <div
        className="ui-alert ui-alert-info ui-alert-no-with-description ui-alert-sm-icon"
        style={
          Object {
            "width": 500,
          }
        }
      >
        <AlertIcon
          afterClose={[Function]}
          closable={false}
          closeText={null}
          description={null}
          locale={
            Object {
              "close": "关闭",
            }
          }
          localeCode="zh-cn"
          onClick={[Function]}
          onClose={[Function]}
          prefixCls="ui-alert"
          preventHide={false}
          showIcon={true}
          title="显示icon-信息提示"
          type="info"
          width={500}
        >
          <Icon
            prefixCls="zw-icon"
            size="sm"
            theme="default"
            type="info-round-fill"
            viewBox="0 0 32 32"
          >
            <Iconfont
              className="zw-icon zw-icon--info-round-fill zw-icon--default zw-icon--sm"
              size="sm"
              theme="default"
              type="info-round-fill"
            >
              <Icon
                className="zw-icon zw-icon--info-round-fill zw-icon--default zw-icon--sm"
                prefixCls="zw-icon"
                size="sm"
                theme="default"
                type="info-round-fill"
                viewBox="0 0 32 32"
              >
                <i
                  className="zw-icon zw-icon--info-round-fill zw-icon--default zw-icon--sm"
                  size="sm"
                  theme="default"
                  type="info-round-fill"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <use
                      xlinkHref="#info-round-fill"
                    />
                  </svg>
                </i>
              </Icon>
            </Iconfont>
          </Icon>
        </AlertIcon>
        <span
          className="ui-alert-message"
        >
          显示icon-信息提示
        </span>
        <span
          className="ui-alert-description"
        />
      </div>
    </Alert>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;

exports[`Alert renders basic normal Alert correctly 3`] = `
<ForwardRef(forwardRef)
  closable={true}
  description="可关闭提示框"
  title="基础用法-信息提示"
  type="info"
>
  <LocaleReceiver
    closable={true}
    description="可关闭提示框"
    forwardedRef={null}
    title="基础用法-信息提示"
    type="info"
  >
    <Alert
      afterClose={[Function]}
      closable={true}
      closeText={null}
      description="可关闭提示框"
      locale={
        Object {
          "close": "关闭",
        }
      }
      localeCode="zh-cn"
      onClick={[Function]}
      onClose={[Function]}
      prefixCls="ui-alert"
      preventHide={false}
      showIcon={false}
      title="基础用法-信息提示"
      type="info"
      width={500}
    >
      <div
        className="ui-alert ui-alert-info ui-alert-closable"
        style={
          Object {
            "width": 500,
          }
        }
      >
        <CloseIcon
          closable={true}
          close={[Function]}
          closeText={null}
          handleClose={[Function]}
          prefixCls="ui-alert"
        >
          <Icon
            className="ui-alert-close-btn"
            onClick={[Function]}
            prefixCls="zw-icon"
            size="md"
            theme="default"
            type="wrong"
            viewBox="0 0 32 32"
          >
            <Iconfont
              className="zw-icon ui-alert-close-btn zw-icon--wrong zw-icon--default zw-icon--md"
              onClick={[Function]}
              size="md"
              theme="default"
              type="wrong"
            >
              <Icon
                className="zw-icon ui-alert-close-btn zw-icon--wrong zw-icon--default zw-icon--md"
                onClick={[Function]}
                prefixCls="zw-icon"
                size="md"
                theme="default"
                type="wrong"
                viewBox="0 0 32 32"
              >
                <i
                  className="zw-icon ui-alert-close-btn zw-icon--wrong zw-icon--default zw-icon--md"
                  onClick={[Function]}
                  size="md"
                  theme="default"
                  type="wrong"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <use
                      xlinkHref="#wrong"
                    />
                  </svg>
                </i>
              </Icon>
            </Iconfont>
          </Icon>
        </CloseIcon>
        <span
          className="ui-alert-message"
        >
          基础用法-信息提示
        </span>
        <span
          className="ui-alert-description"
        >
          可关闭提示框
        </span>
      </div>
    </Alert>
  </LocaleReceiver>
</ForwardRef(forwardRef)>
`;
